Fix: Unhandled promise rejection TypeError: Cannot read property '__useDefault' of undefined

--- a/CordovaAppRequireJS/www/index.html
+++ b/CordovaAppRequireJS/www/index.html
@@ -12,12 +12,12 @@
 
     <!-- CordovaAppRequireJS references -->
     <link href="css/index.css" rel="stylesheet" />
+
 </head>
-<body aurelia-app="scripts/appBundle">
+<body aurelia-app="views/welcome">
     <p>Hello, your application is ready!</p>
 
     <script type="text/javascript" src="cordova.js"></script>
-
     <script type="text/javascript" src="scripts/appBundle.js"></script>
     <script type="text/javascript" data-main="scripts/config" src="scripts/require.js"></script>
 </body>
