--- a/CordovaAppRequireJS/www/index.html
+++ b/CordovaAppRequireJS/www/index.html
@@ -14,7 +14,7 @@
     <link href="css/index.css" rel="stylesheet" />
 
 </head>
-<body aurelia-app="views/welcome">
+<body aurelia-app="views/main">
     <p>Hello, your application is ready!</p>
 
     <script type="text/javascript" src="cordova.js"></script>
