--- a/CordovaAppRequireJS/www/index.html
+++ b/CordovaAppRequireJS/www/index.html
@@ -19,6 +19,6 @@
 
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="scripts/appBundle.js"></script>
-    <script type="text/javascript" data-main="scripts/config" src="scripts/require.js"></script>
+    <script type="text/javascript" data-main="scripts/config" src="scripts/requirejs/require.js"></script>
 </body>
 </html>
