workinig on grunt setup

--- a/CordovaAppRequireJS/www/index.html
+++ b/CordovaAppRequireJS/www/index.html
@@ -11,6 +11,7 @@
     <title>CordovaAppRequireJS</title>
 
     <!-- CordovaAppRequireJS references -->
+    <link href="css/ui-light.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
 
 </head>
@@ -18,6 +19,10 @@
     <p>Hello, your application is ready!</p>
 
     <script type="text/javascript" src="cordova.js"></script>
+
+    <script src="scripts/winjs/base.min.js"></script>
+    <script src="scripts/winjs/ui.min.js"></script>
+
     <script type="text/javascript" src="scripts/appBundle.js"></script>
     <script type="text/javascript" data-main="scripts/config" src="scripts/requirejs/require.js"></script>
 </body>
