working on navigation - aurelia router is undefined :(

--- a/CordovaAppRequireJS/www/index.html
+++ b/CordovaAppRequireJS/www/index.html
@@ -17,12 +17,12 @@
 <body aurelia-app="views/main">
     <p>Hello, your application is ready!</p>
 
-    <script type="text/javascript" src="cordova.js"></script>
+    <script src="cordova.js"></script>
 
     <script src="lib/winjs/js/base.min.js"></script>
     <script src="lib/winjs/js/ui.min.js"></script>
 
-    <script type="text/javascript" src="scripts/appBundle.js"></script>
-    <script type="text/javascript" data-main="scripts/config" src="lib/requirejs/require.js"></script>
+    <script src="scripts/appBundle.js"></script>
+    <script data-main="scripts/config" src="lib/requirejs/require.js"></script>
 </body>
 </html>
